# music_intelligence_pipeline

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: BUILD_PLAN.md  DATA_DICTIONARY.md  DECISIONS.md  KEY_FEATURES_PLAN.md  MLOPS.md  PLAN_AND_NEXT_STEPS.md  SEMANTIC_LAYER.md
models/: arousal_random_forest.joblib
scripts/: _bootstrap.py  run_analyst.py  run_emotion_predictions.py  run_enrich_pipeline.py  run_feature_pipeline.py  run_full_pipeline.py  run_phase2_labels_and_join.py  run_semantic_example.py  train_emotion_models.py  validate_song_features.py
src/: __init__.py  app_emotion_map.py
src/analyst/: __init__.py  query_llm.py  run_query.py
src/config/: __init__.py  data_paths.py  paths.py
src/modeling/: __init__.py  train_emotion_models.py
src/pipeline/: __init__.py  audio_derived_features.py  build_modeling_dataset.py  deam_feature_loader.py  deam_labels_loader.py  deam_loader.py  enrich_song_features.py  generate_emotion_predictions.py  key_parsing.py  validate_song_features.py
src/semantic/: __init__.py  emotion_tags.py
tests/: __init__.py  test_placeholder.py
