[project]
name = "music-intelligence-pipeline"
version = "0.1.0"
description = "ML pipeline: raw audio → features → emotion predictions → semantic layer"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["data", ".git", "models", "__pycache__"]

[tool.ruff.lint]
# Reduce noise: script/pipeline patterns, ML naming (X_train), Shiny API, long validation
ignore = [
    "E402",      # module import not at top (scripts set path first)
    "ARG001",    # unused session (Shiny server signature)
    "B007",      # loop var not used (intentional in comprehensions)
    "B023",      # loop var in closure (default binding)
    "C408",      # dict() vs {} (readability in plotly)
    "ERA001",    # commented-out code (kept for reference)
    "N803",      # X_train, X_val (ML convention)
    "N806",      # X in function (ML feature matrix)
    "PLC0415",   # import not at top (scripts/lazy imports)
    "PLR0912",   # too many branches (main, validate)
    "PLR0913",   # too many arguments (train API)
    "PLR0915",   # too many statements (main, server)
    "PLR2004",   # magic values (BPM buckets, thresholds)
    "RET504",    # assignment before return (clarity)
    "TID252",    # relative imports (package layout)
]

[tool.ruff.format]
quote-style = "double"
